# program-proofs-prusti

./: Cargo.toml  README.md
.github/workflows/: prusti.yml
chapter1/: Cargo.toml  Prusti.toml
chapter1/src/: examples.rs  exercises.rs
chapter1/src/examples/: example_1_0.rs  example_1_1.rs  example_1_2.rs  example_1_3_1.rs  example_1_3_2.rs  example_1_4_1.rs  example_1_5_0.rs  example_1_6_1.rs  example_1_6_2.rs
chapter1/src/exercises/: exercise_1_0.rs  exercise_1_1.rs  exercise_1_2.rs  exercise_1_3.rs
chapter2/: Cargo.toml
chapter2/src/: examples.rs  exercises.rs  lib.rs
chapter2/src/examples/: example_2_0.rs  example_2_3_0.rs  example_2_3_1.rs
chapter2/src/exercises/: exercise_2_17.rs  exercise_2_18.rs  exercise_2_19.rs  exercise_2_20.rs  exercise_2_24.rs  exercise_2_25.rs
chapter3/: Cargo.toml  Prusti.toml
chapter3/src/: examples.rs  exercises.rs
chapter4/: Cargo.toml
chapter4/src/: examples.rs  exercises.rs
chapter5/: Cargo.toml  Prusti.toml
chapter5/src/: examples.rs  exercises.rs  lib.rs
chapter5/src/examples/fail/: example_5_0.rs  example_5_1.rs  example_5_7_0.rs  example_5_7_1.rs  example_5_8_0.rs  example_5_8_1_1.rs  example_5_8_1_2.rs
chapter5/src/examples/pass/: example_5_2_1.rs  example_5_2_2.rs  example_5_3_1.rs  example_5_4_0_1.rs  example_5_4_0_2.rs  example_5_5.rs  example_5_5_1.rs  example_5_6.rs
chapter5/src/exercises/fail/: exercise_5_0.rs  exercise_5_10.rs  exercise_5_11.rs  exercise_5_12.rs  exercise_5_3.rs  exercise_5_8.rs
chapter5/src/exercises/pass/: exercise_5_5.rs  exercise_5_7.rs
(+39 files in other folders)
