[package]
name = "chapter5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prusti-contracts = "0.2.0"

[features]
# To check failing code too, either enable ["pass", "fail"] as the default below,
# or run: cargo clippy --all-features -- -D warnings
default = ["pass"]
# default = ["pass", "fail"]
pass = [] # Code that can be verified
fail = [] # Code that cannot be verified (yet)
